<resources>
    <string name="app_name">TrafficSafe</string>
    <string name="trafficsafe">TrafficSafe</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logo">logo</string>
    <string name="do_not_have_account">Do not have account ?</string>
    <string name="register"> REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="cnic">CNIC without dashes</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_with_terms_and_coditions">Agree with Terms and Coditions</string>
    <string name="sign_up">SIGN UP</string>
    <string name="please_login_with_username_and_password_to_enable_biometric_login_from_settings">Please login with Username and Password to enable biometric login from settings</string>
    <string name="ok">OK</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="we_need_to_make_sure_it_is_you">We need to make sure it is you</string>
    <string name="place_your_finger_on_the_fingerprint_scanner_and_let_application_perform_biometric_authentication">Place your finger on the fingerprint scanner and let application perform biometric authentication</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme</string>
    <string name="manage_favourite_services">Manage favourite services</string>
    <string name="complaint">Complaint</string>
    <string name="language">Language</string>
    <string name="eng">Eng</string>
    <string name="urdu">Urdu</string>
    <string name="touch_id">Touch ID</string>
    <string name="follow_us_on">Follow us</string>
    <string name="sorry">Sorry!</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and Try again</string>
    <string name="no_internet_urdu">براہ کرم اپنا انٹرنیٹ کنکشن چیک کریں اور دوبارہ کوشش کریں</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="password_not_shown">••••••••</string>
    <string name="update_password">Update Password</string>
    <string name="instructions">Instructions</string>
    <string name="your_password_should_meet_the_following_requirements_n_contain_at_least_one_uppercase_letter_n_contain_at_least_one_lowercase_letter_n_contain_at_least_one_special_character_n_backslash_single_quote_double_quotes_backticks_ampersand_less_than_greater_than_pipe_character_dash_comma_and_space_is_not_allowed_nshould_be_between_8_and_20_characters_in_length"><![CDATA[Your password should meet the following requirements:\n-Contain at least one uppercase letter.\n-Contain at least one lowercase letter.\n-Contain at least one special character.\n-backslash(), single quote(\'), double quote(\'\'\ \'\'), backticks(`), ampersand(&), less than(<), greater than(>), pipe character(|), dash(-), comma(,) and space is not allowed.\nShould be between 8 and 20 characters in length.]]></string>
    <string name="current_password">Current Password</string>
</resources>