<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_cross"
            android:contentDescription="@string/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorry"
            android:layout_marginTop="@dimen/margin_top"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_check_your_internet_connection_and_try_again"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_start_end"
            />

       <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_urdu"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_start_end"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/ok_button_color"
            android:text="@string/ok"
            android:id="@+id/btnOk"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>