<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/profile_frag_navbar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:cursorColor="@color/cursor_color"
        app:layout_constraintTop_toBottomOf="@+id/llNavBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilMobile"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:boxStrokeColor="@color/input_field_border_color"
        app:cursorColor="@color/cursor_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/ilMobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilName"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:cursorColor="@color/cursor_color"
        app:layout_constraintTop_toBottomOf="@id/ilName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilCnic"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCnic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cnic"
            android:inputType="number"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:boxStrokeColor="@color/input_field_border_color"
        app:cursorColor="@color/cursor_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/ilCnic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilEmail"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:cursorColor="@color/cursor_color"
        app:layout_constraintTop_toBottomOf="@id/ilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilPassword"
        app:suffixText="@string/change_password"
        app:suffixTextColor="@color/text_color"
        app:suffixTextAppearance="@style/ShapeAppearance.Material3.Corner.Small"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:text="@string/password_not_shown"
            android:id="@+id/etPassword"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/update"
        android:layout_marginTop="40dp"
        android:id="@+id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@id/ilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
