<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_start_end"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="5dp"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/dialog_fingerprint"
                android:contentDescription="@string/logo"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_login_with_username_and_password_to_enable_biometric_login_from_settings"
                android:padding="15dp"
                android:textSize="16sp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_end"
                android:layout_marginEnd="@dimen/margin_start_end"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/button_color"
                android:text="@string/ok"
                android:id="@+id/btnOk"
                />
        </LinearLayout>

</androidx.cardview.widget.CardView>