<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_start_end"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_top"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_logo"
                android:contentDescription="@string/logo"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/margin_start_end"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication_required"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/we_need_to_make_sure_it_is_you"
                    android:textSize="15sp"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_your_finger_on_the_fingerprint_scanner_and_let_application_perform_biometric_authentication"
                android:textSize="14sp"
                />

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_fingerprint_colored"
                android:contentDescription="@string/logo"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>