<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignupFrag"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:boxStrokeColor="@color/input_field_border_color"
        app:cursorColor="@color/cursor_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilMobile"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mobile_number"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:boxStrokeColor="@color/input_field_border_color"
        app:cursorColor="@color/cursor_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/ilMobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilName"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:boxStrokeColor="@color/input_field_border_color"
        app:cursorColor="@color/cursor_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/ilName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilCnic"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCnic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/cnic"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:boxStrokeColor="@color/input_field_border_color"
        app:cursorColor="@color/cursor_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/ilCnic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilEmail"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:boxStrokeColor="@color/input_field_border_color"
        app:cursorColor="@color/cursor_color"
        app:hintTextColor="@color/text_color"
        app:passwordToggleTint="@color/toggle_tint_color"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/ilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilPassword"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        app:boxStrokeColor="@color/input_field_border_color"
        app:cursorColor="@color/cursor_color"
        app:hintTextColor="@color/text_color"
        app:passwordToggleTint="@color/toggle_tint_color"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/ilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ilCPassword"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:id="@+id/etCPassword"
            android:inputType="textPassword"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_with_terms_and_coditions"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_top"
        app:layout_constraintTop_toBottomOf="@id/ilCPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/cbTerms"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/btnSignup"
        app:layout_constraintTop_toBottomOf="@id/cbTerms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
